--- a/app/resources/locales/views/email/share_mail_event.edge
+++ b/app/resources/locales/views/email/share_mail_event.edge
@@ -1,5 +1,5 @@
-<strong>Fala {{name}}, beleza?</strong>
+<strong>Fala {{fromMail}}, beleza?</strong>
 
-<p>Estou compartilhando um evento contigo: {{title}}</p>
+<p>Estou compartilhando um evento contigo:</p>
 
 <p>Em anexo voce encontra detalhes da tarefa</p>
